4.0.9
  19-02-04
	Improvement
	* #i0035: (c) 2019
	* #i0034: JavaScript will loaded after jQuery is loaded.
						Thanks to Max Dubiel from corussoft.de
						Affected file:
						* Resources/Private/Fluid/FluidStyledContent/Partials/Javascript.html

4.0.8
  18-04-30
	Improvement
	* #i0033: New documentation:
						* Docs - Developers - Third Party Extensions
						* Docs - Known Bugs - Css Styled Content
						* Docs - Known Bugs - jQuery

4.0.7
  18-01-14
	Improvement
	* #i0032: Update Copyright 2018

4.0.6
  18-01-09
	Improvement
	* #i0031: Default.html is moved to EXT:browser (9.0.2). Reference EXT:slick #t1836

4.0.5
  17-12-26
	Improvement
	* #i0030: TYPO3 8.7: labelling of include static template

4.0.4
  17-12-22
	Improvement
	* #i0029: TYPO3 8.7: moved jquery(.. to $(..
	* #i0028: icon for tt_content type

4.0.3
  17-12-17
	Improvement
	* #t1836: IS CANCELED BY #i0031 above!
						Slick Slider: Remove waste a-tag
						Heavy intervention: Fluid template Default.html is overriden! See
						* Resources/Private/Fluid/FluidStyledContent/Layouts/Default.html
	* #t1833:	CSS Styled Content > Fluid Styled Content
	* #i0027: Update for t3foundation 3.0
						* additional start CSS classes are removed from
							* slickcarousel
							* slickcontent
							* slickgallery
	* #i0026: Slick item and fluid_styled_content: div-wrap is moved from figure to figure and text. See
						* Resources/Private/Fluid/Slick/Templates/Slickitem.html

4.0.2
  17-12-14
  Improvement
	* #i0025: Fluid template: <v:asset.script> is removed

4.0.1
  17-12-05
  Improvement
	* #i0024: Upgrade TCA for TYPO3 8.7
						* bodytext;;;richtext[]:rte_transform[mode=ts];*,

4.0.0
  17-10-15
  Feature
	* #i0023: Plugins
						* Slick Slider for Content Elements
						* Slick Slider for Images

3.0.0
  17-10-14
  UPGRADE TYPO3 8.x
	BE AWARE: You should include static templates again!
	THANKS to Andrea Herzog-Kienast to contract the upgrade :) http://www.kienastdv.de/