@@ -1,6 +1,7 @@
 page {
   includeJSFooter {
     slick = {$plugin.slick.carousel.javascript.file}
+    initSlickDocumentReady = EXT:slick/Resources/Public/JavaScript/initSlickDocumentReady.js
   }
 }
 
