@@ -16,7 +16,8 @@
     }
 
     function _initSlick() {
-      if ($(window).width() > 600 || {data.pid} == 333)
+			alert('slick');
+      //if ($(window).width() > 600 || {data.pid} == 333)
       $('#slickid-{data.uid}').not('.slick-initialized').slick({
             accessibility: <f:format.raw>{data.pi_flexform.accessibility}</f:format.raw>
           ,  autoplay: <f:format.raw>{data.pi_flexform.autoplay}</f:format.raw>
