@@ -1,0 +1,10 @@
+function initSlickDocumentReady() {
+	if (typeof initSlick === "function") {
+		initSlick();
+	}
+}
+
+
+$(document).ready(function () {
+	initSlickDocumentReady();
+});
